--- a/package.json
+++ b/package.json
@@ -3,17 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "12.1.5",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "16.8.0",
-    "react-dom": "16.8.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
     "@material-ui/core": "4.12.4",
     "@material-ui/icons": "4.11.2",
     "@material-ui/lab": "4.0.0-alpha.61",
-    "@material-ui/pickers": "3.3.10"
+    "@material-ui/pickers": "3.3.10",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "12.1.5",
+    "@testing-library/user-event": "^13.5.0",
+    "prettier": "^3.0.3",
+    "react": "16.8.0",
+    "react-dom": "16.8.0",
+    "react-router-dom": "^6.15.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
